# ffmpeg101

./: CMakeLists.txt  demuxing_decoding  encoding_muxing.c  main  main.cpp  muxing  muxing.c  remuxing
include/: libavcodec  libavfilter  libavformat  libavutil  libswresample  libswscale
lib/: libavcodec.dylib  libavfilter.dylib  libavformat.dylib  libavutil.dylib  libswresample.dylib  libswscale.dylib
